# mangadex-manga-scrapper

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml  reorganize_downloads.py  requirements.txt  setup.py  update_volumes.py
.github/workflows/: README.md  quick-test.yml  test.yml
config/: __init__.py  settings.py
docs/: API_REFERENCE.md  FOLDER_STRUCTURE.md  QUICK_START.md  RATE_LIMITS.md  USAGE_EXAMPLES.md
mangadx_scrapper/: __init__.py  client.py  config.py  downloader.py  exceptions.py  http_client.py  models.py
mangadx_scrapper/api/: __init__.py  at_home.py  author.py  chapter.py  cover.py  manga.py  scanlation_group.py
mangadx_scrapper/cli/: __init__.py  download.py  main.py  search.py
mangadx_scrapper/utils/: __init__.py  formatters.py  logger.py
src/: cli.py
src/mangadex/: __init__.py  client.py  downloader.py  exceptions.py  http_client.py  models.py
src/mangadex/api/: __init__.py  at_home.py  author.py  chapter.py  cover.py  manga.py  scanlation_group.py
src/mangadx/: __init__.py  client.py  downloader.py  exceptions.py  http_client.py  models.py
src/mangadx/api/: __init__.py  at_home.py  author.py  chapter.py  cover.py
src/utils/: __init__.py  formatters.py  logger.py
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_http_client.py  test_models.py
